# harbor-cookbook

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
harbor_cookbook/gepa/: README.md  optimize.py  utils.py
harbor_cookbook/harbor_rl/: README.md  train.py
harbor_cookbook/prime_rl/: README.md
harbor_cookbook/recipes/: registry.json
harbor_cookbook/recipes/computer-use/: README.md  instruction.md  task.toml
harbor_cookbook/recipes/computer-use-ubuntu/: README.md
harbor_cookbook/recipes/computer-use-windows/: README.md  instruction.md  task.toml
harbor_cookbook/recipes/dns-blacklisting/: README.md  instruction.md
harbor_cookbook/recipes/dns-filtering/: README.md
harbor_cookbook/recipes/mcp-tools/: README.md  instruction.md  task.toml
harbor_cookbook/recipes/multi-container/: README.md  instruction.md  task.toml
harbor_cookbook/recipes/multi-reward/: README.md  config.yaml  instruction.md  task.toml
harbor_cookbook/recipes/multi-step/: README.md
harbor_cookbook/recipes/multi-verifier/: README.md  config.yaml
harbor_cookbook/recipes/s3-mount/: README.md  instruction.md  task.toml
harbor_cookbook/recipes/sidecar-dns/: README.md  instruction.md  task.toml
harbor_cookbook/recipes/simple-task/: README.md  task.toml
harbor_cookbook/recipes/simulated-user/: README.md  task.toml
harbor_cookbook/recipes/single-container-dns/: README.md  instruction.md  task.toml
harbor_cookbook/recipes/skills/: README.md  task.toml
harbor_cookbook/sky_rl/: README.md
harbor_cookbook/tinker_rl/: README.md
(+68 files in other folders)
