[project]
name = "harbor-cookbook"
version = "1.0.0"
description = "Cookbook for building evals and optimizing agents using Harbor"
readme = "README.md"
authors = [
    { name = "Habor Framework Team", email = "team@haborframework.com" },
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = ["harbor"]

[project.scripts]
harbor-cookbook = "harbor_cookbook:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
