[project]
name = "harbor-cookbook"
version = "1.0.0"
description = "Cookbook for building evals and optimizing agents using Harbor"
readme = "README.md"
authors = [
    { name = "Habor Framework Team", email = "team@haborframework.com" },
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = ["harbor"]

[dependency-groups]
dev = ["ruff"]

